lib/src/compiler/tests/testdata/errors/60.out
error: invalid regular expression
 --> line:5:15
  |
5 |     $b = /abc{}/
  |               ^ repetition quantifier expects a valid decimal
  |